--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "parse5": "^1.4.2",
     "request": "^2.55.0",
     "tough-cookie": "^1.1.0",
+    "whatwg-url": "~0.2.0",
     "xml-name-validator": ">= 2.0.1 < 3.0.0",
     "xmlhttprequest": ">= 1.6.0 < 2.0.0",
     "xtend": "^4.0.0"
